# deadlock-api-rust

./: .dockerignore  .env.example  .env.testing  .env.testing.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.testing  README.md  Taskfile.yaml  docker-compose.testing.yaml  docker-compose.yaml  mise.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  docker-image.yaml  lint.yml  main.yml  rust.yml  security-audit.yml
.sqlx/: query-02cbaa28c3af4ce34c651d680d8ab41ca6c2173d37ee459eb6309df9ddd25017.json  query-05cc7aa649ea57c12c4948607a668a4ac5ce5427148cc320a8eabdba7bc9d5cc.json  query-0b18226cf751a07739a19e81fd8fddc3ee236f8b444bd1814f0c1c7f178ed626.json  query-0f6ca45ea0e049a38cab1f70cd62897813fadbc2bca846f9f770b42d67a814e2.json  query-0f7334b8201dc96d923723d4fef88ce820fcf6c41ba49249e52be4d6e1a8ef9d.json  query-1239cdc8aac7b33be3b8e811cddf3879d538873c35de4ae9bce9b41d7b9c21bc.json  query-128cf189759ef156306f99413c2ab3e9d247a34ca5cfe08edc3697c1e7b94eab.json  query-26fc118fd4128206970d87eb794969e33bf59f4287c399d807b6fd88fdf2b9a4.json  query-2bb98362b92ff538e342b9216be345bcca5cbfdfbadea3f8c614392227d9b1d9.json  query-34426456b5818bbaead8be46f55b4c9efb359a50a6e1c2ebd656282656f567c8.json  query-390bcdd3da7999068a714b028ffe73cb88392d063aba3057668cfaadb50660ed.json  query-39449e89c455986cf917490df342ccee1940a4584e486a50616f91cf2e06eccb.json  query-41192d73636ada7eb9d0444387b63e443004f74fde977dc169a1735d115bd12d.json  query-4661a31a77942d9170413c6fb4ee51b5fd71f97a4686eddc5c9342d06ef45190.json  query-4b6781b13572f2975b1c128ef7c227834b999a6483186223415818bbfd541b31.json  query-4d78a83520e36e351a4e77598d4c44ddd4cfc26706f4c09595de7c855d224b86.json  query-4e7e08ae892444365462e9836d12363f47ea63e664974be8978365182c0017d7.json  query-60efbee94cb01cd38f67be94c50393eec8583fd2386c1d7ed57a8eafd83e4d2d.json  query-67c01eab6cb60bc1f2df9f9fe1808e9e9087506d1548a83e25fd30a64cb84b6b.json  query-6cdfcede25c0dfac5ca1aeee1fef17d8ca0f0ba1c292d6e080fcb3ff2cd2e2d0.json  query-7170eb45f1dbb7e16e48ba305ca42de21339ab342d3c96739709c7c46a81ff32.json  query-81e45ebef9eefa3b47ef586d480ee63b138ecb544e02e36467f32c614608636c.json  query-830a835a6663bac4aa7c54b331c0f44016a7725f13fe171dad38739dff3d4836.json  query-856e734119b88f893973dfddf1ad9682c7b0add2ded484786123ca6c1ac7bdef.json  query-882dea51b1bca06ece88396e3428c2078fa46b2c53b7f45253e60dbdbc538f86.json  query-88c12d6c61166707c092790bf0b663f953aceddbc07aa39ce43053c246eff300.json  query-8cf78c7a42cd4ec88d6abe898c1b230083f77d13e876eb29db2e203bac23c305.json  query-93815af5aa0abdbe2bddea88ddef8e669f1a632932adb61ac4dfceb2eb4505bd.json  query-98fa50e42ef1dc4914ac618746aec9cbee2b58604684ee9de82f51a5c90b63cb.json  query-9c7a3a6d38e1504d67a8134ca2f35be1d846f9e006a274a7b5dd7882ac08958b.json  query-9d6b170d7857b86efaf1cfc9418e469e40c7fe7f272a9b6249a5c5a84baf901f.json  query-a0abe0aa0541c9ed69dd0149ee78c3df8dc03ba13709fdf47a9ac797b05e96ec.json  query-a35c29125d1164eb49d3482c3abd511c15f6ab078563e67eaea355356ae10166.json  query-a402bb81ed31de79e9d206f5ddffd42b519411a451fdaeeaf88f426e7eaec425.json  query-b1b4b1d79fad4c716e545b9d605fe472d33a860b169e049d8c366e2c72ba727e.json  query-c46da5407366eebceb6492f0aa237939c594a6a14298328454489ff343cd9bd1.json  query-c75d810765d776c80b327dc961fdd1d61181217e23279ced320420f79b860256.json  query-c9d09e3114375abc4455ba8b745ce86cbeafb624e5cf7a6684c363dc4f856d0d.json  query-d7f5ed9c18120dd1127b278170c617db48ef59776b233b088cf343f669ea5255.json  query-d80351172ed860c7a0431c63af439114eeff3cfdc3fa2612d9c1a2d8ef7b2295.json  (+7 more)
src/: api_doc.rs  config.rs  error.rs  lib.rs  limiter.rs  main.rs  state.rs
src/api/: mod.rs
src/api/v1/: big_patch_days.rs  mod.rs
src/context/: config.rs  mod.rs  state.rs
src/middleware/: api_key.rs  cache.rs  fallback.rs  feature_flags.rs  mod.rs  protect_user_accounts.rs  track_requests.rs
src/middleware/rate_limiter/: client.rs  extractor.rs
src/routes/: health.rs  mod.rs
src/routes/v1/: big_patch_days.rs  mod.rs
src/routes/v1/analytics/: ability_order_stats.rs  badge_distribution.rs  build_item_stats.rs  common_filters.rs  game_stats.rs  hero_comb_stats.rs  hero_comb_win_loss_stats.rs  hero_counters.rs  hero_counters_stats.rs  hero_scoreboard.rs  hero_stats.rs  hero_stats_over_time.rs  hero_synergies.rs  hero_synergies_stats.rs  hero_win_loss_stats.rs  item_permutation_stats.rs  item_stats.rs  item_win_loss_stats.rs  kill_death_stats.rs  mod.rs  net_worth_curve.rs  player_performance_curve.rs  player_scoreboard.rs  player_stats_metrics.rs  scoreboard_types.rs
src/routes/v1/auth/: mod.rs  patreon.rs  webhook.rs
src/routes/v1/builds/: mod.rs  query.rs  route.rs  structs.rs
src/routes/v1/commands/: mod.rs  route.rs  variables.rs
src/routes/v1/data_privacy/: mod.rs  (+1 more)
src/routes/v2/: mod.rs
src/services/: mod.rs
src/services/assets/: client.rs  types.rs
src/services/patreon/: client.rs  extractor.rs  jwt.rs  membership.rs  mod.rs  prioritization.rs  repository.rs  steam_accounts_repository.rs  types.rs  verification_job.rs  webhook_types.rs
src/services/rate_limiter/: client.rs  extractor.rs  mod.rs  types.rs
src/services/request_logger/: mod.rs  types.rs
src/services/steam/: client.rs  types.rs
src/utils/: assets.rs  checks.rs  hltv_download.rs  limiter.rs  mod.rs  parse.rs  steam.rs  tracing.rs  types.rs
src/utils/demo_parser/: entity_events.rs  error.rs  hashes.rs  mod.rs  types.rs  utils.rs  visitor.rs
tests/: analytics.rs  builds.rs  health.rs  info.rs  load_app_state.rs  patches.rs  player.rs  sql.rs
tests/data/: clickhouse.sql
tests/data/clickhouse/: _restricted_user.sql  active_matches.sql  items.sql  match_info.sql  match_player.sql  match_salts.sql  mmr_history.sql  player_match_history.sql  request_logs.sql
tests/data/postgres/: 00_patrons.sql  api_keys.sql  builds.sql  patrons.sql  protected_user_accounts.sql
tests/it/: analytics.rs  builds.rs  info.rs  main.rs  patches.rs  player.rs  sql.rs
tests/utils/: checks.rs  mod.rs  request.rs
(+73 files in other folders)
