[package]
name = "deadlock-api-rust"
version = "0.1.0"
edition = "2024"
description = "API for Deadlock game data"
repository = "https://github.com/deadlock-api/deadlock-api-rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
redis = { version = "0.32.3", default-features = false, features = ["tokio-comp"] }
envy = "0.4.2"
clickhouse = "0.13.3"
sqlx = { version = "0.8.6", features = ["chrono", "derive", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
cached = { version = "0.55.1", features = ["async", "serde"] }
axum = { version = "0.8.4", features = ["http2"] }
utoipa-axum = "0.2.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
object_store = { version = "0.12.2", features = ["aws"], default-features = false }
tower = "0.5.2"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-http = { version = "0.6.6", features = ["compression-zstd", "compression-gzip", "cors", "decompression-zstd", "decompression-gzip", "normalize-path", "trace"] }
tracing = "0.1.41"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
axum-prometheus = "0.8.0"
itertools = "0.14.0"
futures = "0.3.31"
snap = "1.1.1"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "dd0a663eae1c53db66265443a5d818bb1db4f79c", features = ["gc-client", "serde"] }
prost = "0.14.1"
base64 = "0.22.1"
tryhard = "0.5.2"
async-compression = { version = "0.4.25", features = ["bzip2", "tokio"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
axum-extra = { version = "0.10.1", features = ["query"] }
metrics = "0.24.2"
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "6b826ad857dcaa2bc0d6370cae221a36b37cfba8" }
async-stream = "0.3.6"
bytes = { version = "1.10.1", features = ["serde"] }
thiserror = "2.0.12"
rand = "0.9.1"
url = { version = "2.5.4", features = ["serde"] }
quick-xml = { version = "0.38.0", features = ["serde", "serialize"] }

[dev-dependencies]
rstest = "0.25.0"

[patch.crates-io]
axum-prometheus = { git = "https://github.com/Ptrskay3/axum-prometheus.git", rev = "2e8b39733efed5c5bbc6f710a42e045ae878fe15" }
object_store = { git = "https://github.com/apache/arrow-rs-object-store.git", rev = "bbfdd704401cdfc8634a5534c9d17d2f479c6f11" }
